fix content rescale on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -1641,9 +1641,9 @@
         }
 
         .icon-preview ion-icon {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 10px;
+            width: 82px;
+            height: 82px;
+            margin-bottom: 20px;
         }
 
         .copy-options {
@@ -1658,7 +1658,7 @@
         }
 
         .fig-block {
-            padding: 10px;
+            padding: 10px 0;
             font-weight: 600;
             display: flex;
             margin-top: 10px;
